# open-lotto

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_REVIEW.md  CONTRIBUTING.md  Doxyfile  GOVERNANCE.md  README.md  RELEASES.md  SECURITY.md  results.csv  results.json
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS  benchmark_baseline.json  dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: build-release.yml  ci.yml  create-release.yml  labels.yml  macos-code-sign.yml  release.yml  windows-nsis-installer.yml
.reuse/: dep5
LICENSES/: MIT.txt
build-sanitizer/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  benchmark  cmake_install.cmake  open-lotto  test_combogen
build-sanitizer/Testing/Temporary/: CTestCostData.txt
config/: download.conf.example  sources.conf.example
docs/: API_REFERENCE.md  ARCHITECTURE.md  BASELINE_TRACKING.md  BUILDING_FROM_SOURCE.md  CLI_REFERENCE.md  DEBUGGING.md  DEVELOPER_API.md  DOWNLOAD_INSTALL.md  ENTROPY_AUDIT.md  LOCALIZATION.md  OPENMP_BENCHMARK.md  OPENMP_OPTIMIZATION.md  OPENMP_QUICKSTART.md  PERFORMANCE.md  PERFORMANCE_ARCHITECTURE.md  PERFORMANCE_TUNING.md  PLUGIN_REVIEW_CHECKLIST.md  SIMULATION_ANALYTICS_METRIC_CATALOG.md  SIMULATION_ANALYTICS_PERFORMANCE.md  SIMULATION_ANALYTICS_SCHEMA.md  STATIC_ANALYSIS.md  downloads.html  ide-setup.md  open-lotto.1  plugin-guide.md  plugin-marketplace.md
docs/adr/: 0000-template.md  0001-plugin-system.md  0002-ball-physics.md  0003-gui-architecture.md  0004-architecture-specific-baselines.md
docs/schemas/: simulation_analytics_v1.schema.json
docs/v0.5.0/: ANNOUNCEMENT_COPY.md  MILESTONE_BREAKDOWN.md  SEED_CALIBRATION_CLI_API_DRAFT.md  SEED_CALIBRATION_RFC.md  SEED_CALIBRATION_TEST_PERF_STRATEGY.md  SEED_SEARCH_PERFORMANCE_MODEL.md
include/: analytics.h  analytics_data_quality.h  combogen.h  config.h  eurojackpot.h  export.h  gui_opengl.h  gui_sdl.h  historical_db.h  localization.h  log.h  lottery_plugin.h  lotto.h  open_lotto_api.h  plugin_loader.h  plugin_registry.h  random.h  random_seed.h  seed_calibration.h  simulation_analytics_advanced.h  simulation_analytics_core.h  simulation_analytics_export.h  simulation_analytics_metadata.h  theme.h  validate.h
plugins/: eurojackpot.c  lotto.c
scripts/: benchmark_download_workers.sh  build-appimage.sh  build-flatpak.sh  check_performance_regression.sh  configure.sh  generate_changelog.py  generate_docs.sh  generate_plugin.sh  install-git-hooks.sh  install-pre-commit-hooks.sh  install_deps.sh  manage_baselines.py  run_benchmarks.sh  run_clang_tidy.sh  run_coverage.sh  run_cppcheck.sh  run_format_check.sh  run_profiling.sh  run_sanitizers.sh
scripts/appimage/: AppImageBuilder.yml
scripts/flatpak/: com.boussetta.openlotto.yml
scripts/homebrew/: open-lotto.rb
scripts/macos/: sign-and-notarize.sh
scripts/windows/: build-installer.sh  open-lotto-installer.nsi
src/: analytics.c  analytics_data_quality.c  combogen.c  config.c  export.c  gui_opengl.c  gui_sdl.c  historical_db.c  localization.c  log.c  main.c  open_lotto_api.c  plugin_loader.c  plugin_registry.c  plugin_validator.c  random.c  random_seed.c  seed_calibration.c  simulation_analytics_advanced.c  simulation_analytics_core.c  simulation_analytics_export.c  simulation_analytics_metadata.c  theme.c  validate.c
tests/: benchmark.c  benchmark_closest_seed_scaling.sh  benchmark_openmp.c  fuzz_combogen.c  fuzz_plugin_loader.c  fuzz_validate.c  stub_plugin.c  test.h  test_analytics_barometer.c  test_analytics_data_quality.c  test_analytics_frequency.c  test_analytics_golden.sh  test_analytics_hot_cold.c  test_analytics_perf_budget.sh  test_cli_seed_repro.sh  test_closest_seed_determinism.sh  test_closest_seed_sampling_determinism.sh  test_combogen.c  test_dev_api.c  test_export.c  test_historical_db.c  test_localization.c  test_perf_regression.c  test_plugin_loader.c  test_property.c  test_seed_calibration.c  test_simulation_analytics_advanced.c  test_simulation_analytics_core.c  test_simulation_analytics_e2e.sh  test_simulation_analytics_export.sh  test_simulation_analytics_metadata.c  test_simulation_analytics_perf_budget.sh  test_simulation_analytics_property.c  test_simulation_analytics_schema.sh  test_stress.c  test_validate_period.c
tests/data/: eurojackpot_latest.json  eurojackpot_malformed.json  eurojackpot_partial.json  eurojackpot_partial.json.license
tests/fixtures/: historical_lotto_barometer.csv  historical_lotto_barometer.csv.license  historical_lotto_small.csv
tests/golden/: analytics_barometer_gui2d.golden  analytics_frequency_json.golden  analytics_hotcold_gui3d.golden
